<resources>
    <string name="app_name">BarterApp</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_make_offer">Make Offer</string>
    <string name="action_register">Register</string>
    <string name="action_offer_accept">Accept</string>
    <string name="action_offer_refuse">Refuse</string>
    <string name="action_barter">Barter</string>
    <string name="action_delete">Delete</string>
    <string name="action_continue">Apply</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">Products</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_email">anonymous@user.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>

    <string name="menu_account">My Account</string>
    <string name="menu_add">Add Product</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="menu_sign_up">Sign Up</string>

    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_about">About</string>
    <string name="menu_contact">Contact</string>

    <string name="filter_all">All</string>
    <string name="filter_gadgets">Gadgets</string>
    <string name="filter_clothes">Clothes</string>
    <string name="filter_tools">Tools</string>
    <string name="filter_bikes">Bikes</string>

    <string name="prompt_title">Title</string>
    <string name="prompt_alias">Alias</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_tel">Telephone Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_retype">Retype Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="view_user_s_other_products">View user\'s products</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_email_info">Please enter your email address and press the button in order to change your password. If successful go into your email account and follow the link to verify email address.</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="tab_text_profile">Profile</string>
    <string name="tab_text_products">Products</string>
    <string name="tab_text_offers">Offers</string>
    <string name="tab_text_review">Reviews</string>
    <string name="product_info_tag">PRODUCT_INFORMATION</string>
    <string name="view_offer_info_tag">VIEW_OFFER_INFORMATION</string>
    <string name="view_review_info_tag">VIEW_REVIEW_INFORMATION</string>
    <string name="offer_user_id_tag">OFFER_USER_ID</string>
    <string name="offer_product_id_tag">OFFER_PRODUCT_ID</string>
    <string name="offer_product_img__uri_tag">OFFER_PRODUCT_IMG_URI</string>
    <string name="category_prompt">Choose a category</string>
    <string name="cat_gadgets">Gadgets</string>
    <string name="cat_clothes">Clothes</string>
    <string name="cat_tools">Tools</string>
    <string name="cat_bikes">Bicycles</string>
    <string-array name="category_arrays">
        <item>@string/cat_gadgets</item>
        <item>@string/cat_clothes</item>
        <item>@string/cat_tools</item>
        <item>@string/cat_bikes</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>


</resources>
