<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter_all"
        android:orderInCategory="100"
        android:title="@string/filter_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter_gadgets"
        android:orderInCategory="100"
        android:title="@string/filter_gadgets"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter_clothes"
        android:orderInCategory="100"
        android:title="@string/filter_clothes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter_tools"
        android:orderInCategory="100"
        android:title="@string/filter_tools"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter_bikes"
        android:orderInCategory="100"
        android:title="@string/filter_bikes"
        app:showAsAction="never" />
</menu>
