<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddProductActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="57dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/top"
        android:layout_marginEnd="@dimen/margin"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ib_load_photo"
            android:layout_width="@dimen/thumbnail_img_dim"
            android:layout_height="@dimen/thumbnail_img_dim"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/image_border"
            android:padding="16dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_add_a_photo_purple_100dp" />

        <RelativeLayout
            android:layout_width="@dimen/margin"
            android:layout_height="match_parent">
        </RelativeLayout>

        <ImageView
            android:id="@+id/ib_load_video"
            android:layout_width="@dimen/thumbnail_img_dim"
            android:layout_height="@dimen/thumbnail_img_dim"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/image_border"
            android:padding="1dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_add_a_video_purple_100dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:hint="@string/prompt_title"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/ed_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/max_multi_line_input_height"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/top"
        android:layout_marginEnd="@dimen/margin"
        android:hint="Description"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="20"
        android:minLines="5"
        android:maxLines="5"
        android:maxLength="250"
        android:gravity="top|left"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/top"
        android:entries="@array/category_arrays"
        android:prompt="@string/category_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_description"></Spinner>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/top"
        android:background="@color/colorAccent"
        android:enabled="true"
        android:text="@string/action_continue"
        android:textColor="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_category"
        app:layout_constraintVertical_bias="0.119" />

</androidx.constraintlayout.widget.ConstraintLayout>